updating staff picture route and nav link cursor

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,6 +6,7 @@
 .nav-link {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #ffffff !important;
+    cursor: pointer;
 }
 
 .nav-link:hover {
